@@ -276,21 +276,21 @@ sql:Data Types:1:\\b(CHAR|CHAR_LENGTH|CHARACTER|CHARACTER_LENGTH|DEC|DECIMAL|DOU
 sql:Admin:1:\\b(AUTHORIZATION|DROP|GRANT|GROUP|SYSTEM_USER|USER|REVOKE|PRIVILEGES|SESSION|SESSION_USER)\\b::2::#992828::2:0:
 sql:User/Host:1:\\b([a-z0-9]+)\\@([a-z0-9]+)\\b::2::::2:2:
 sql:Group/Joining/Order:1:\\b(GROUP BY|INNER JOIN|OUTER JOIN|RIGHT JOIN|LEFT JOIN|ORDER BY)\\b::2::darkorange::2:0:
-Tcl:Comment:1:#.*?$::2:^top$:#999999::0:2:
-Tcl:Keywords:1:\\b(package|proc|global|return)\\b::2::#003399::2:1:
-Tcl:Import/Include:1:\\b(require|provide)\\b::2::#009999::2:1:
-Tcl:Braces:1:(\\{|\\}|\\[|\\]|\\(|\\))::2::#339933::2:1:
-Tcl:Flow Control:1:\\b(foreach|if|else|elseif|while|for|continue|next|break|exit)\\b::2::#990066::2:1:
-Tcl:Package Name:1:[a-z0-9\\-_\\.]+(?=\:\:)::2::#990066::2:1:
-Tcl:Package Procedure:1:(?<=\:\:)[a-z0-9\\-_\\.]+::2::#990066::2:1:
-Tcl:Builtin Procedures:1:\\b(append|exists|incr|length|Stderr|Stdin|Stdout|unset)\\b::2::#006600::2:1:
-Tcl:Procedure:1:(?<=proc )[a-z\\-_0-9\\/]+(?=( )? \\{)::2::#660000::2:1:
-Tcl:Special Characters:1:(\:|=|\\+|\\*|\\/|\\\\|&|!|#|%|~|@|\\.|,)::2::#009966::2:1:
-Tcl:String (double quoted):1:":(?<!\\\\)":1::#009966::1:2:
-Tcl:Variable:1:\\$[a-z0-9\\-_]+:":2:^(top|String \\(double quoted\\))$:#000066::2:1:
-Tcl:Argument:1:\\-[a-z]+::2::#009966::2:1:
-Tcl:Data Types:1:\\b(array|blob|glob|list|set|string)\\b::2::#660099::2:1:
-Tcl:Numbers:1:[0-9\\.]+::2::#999900::2:1:
+tcl:Comment:1:#.*?$::2:^top$:#999999::0:2:
+tcl:Keywords:1:\\b(package|proc|global|return)\\b::2::#003399::2:1:
+tcl:Import/Include:1:\\b(require|provide)\\b::2::#009999::2:1:
+tcl:Braces:1:(\\{|\\}|\\[|\\]|\\(|\\))::2::#339933::2:1:
+tcl:Flow Control:1:\\b(foreach|if|else|elseif|while|for|continue|next|break|exit)\\b::2::#990066::2:1:
+tcl:Package Name:1:[a-z0-9\\-_\\.]+(?=\:\:)::2::#990066::2:1:
+tcl:Package Procedure:1:(?<=\:\:)[a-z0-9\\-_\\.]+::2::#990066::2:1:
+tcl:Builtin Procedures:1:\\b(append|exists|incr|length|Stderr|Stdin|Stdout|unset)\\b::2::#006600::2:1:
+tcl:Procedure:1:(?<=proc )[a-z\\-_0-9\\/]+(?=( )? \\{)::2::#660000::2:1:
+tcl:Special Characters:1:(\:|=|\\+|\\*|\\/|\\\\|&|!|#|%|~|@|\\.|,)::2::#009966::2:1:
+tcl:String (double quoted):1:":(?<!\\\\)":1::#009966::1:2:
+tcl:Variable:1:\\$[a-z0-9\\-_]+:":2:^(top|String \\(double quoted\\))$:#000066::2:1:
+tcl:Argument:1:\\-[a-z]+::2::#009966::2:1:
+tcl:Data Types:1:\\b(array|blob|glob|list|set|string)\\b::2::#660099::2:1:
+tcl:Numbers:1:[0-9\\.]+::2::#999900::2:1:
 xml:Format:1:<\\?:\\?>:1:^top$:#000000::2:1:
 xml:Tag:1:<((/)?[a-z0-9\:-]+):[^?-]?>:1::#0000ee::0:0:
 xml:Tag Name:1:1::3:^Tag$:#005676::2:0:
