@@ -1,3 +1,7 @@
+2006-09-26  Michèle Garoche <michele.garoche@easyconnect.fr>
+
+	* data/highlighting.in: Fix Tcl highlighting
+
 2006-09-25  Jim Hayward <jim@bluefish.openoffice.nl>
 
 	* 1.0.6 release
